--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -79,16 +79,16 @@
         </div>
         <div class=" row">
             <div class="col-3">
-                <div class="row base_col2_1">
+                <div class="row-cols-2 base_col2_1">
                     <p class="nav_text d-flex align-items-center justify-content-center">Главное меню</p>
                 </div>
-                <div class="row base_col2_2 ">
+                <div class="row-cols-2 base_col2_2 ">
                     подколонка2
                 </div>
-                <div class="row base_col2_1">
+                <div class="row-cols-2 base_col2_1">
                     <p class="nav_text d-flex align-items-center justify-content-center">Советы</p>
                 </div>
-                <div class="row base_col2_2 ">
+                <div class="row-cols-2 base_col2_2 ">
                     подколонка2
                 </div>
             </div>
