--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -7,21 +7,37 @@
 
 {% block content %}
 
-<div class="row example1">
-    <div class="col-8 example2">
-        колонка1
-    </div>
-    <div class="col-4 example3">
-        <div class="row base_col2_1">
-            <p class="nav_text d-flex align-items-center justify-content-center">Главное меню</p>
+<div class="row">
+    <div class="col-8">
+        <div class="row home_col1">
+            <p class="home_col1_text d-flex justify-content-center">Частный розарий</p>
         </div>
-        <div class="row base_col2_2 ">
+        <div class="row example2">
+            <div class="col example1">
+                fsdf
+            </div>
+            <div class="col example3">
+                fgbhf
+            </div>
+        </div>
+        <div class="row example3">
+            fsfs
+        </div>
+        <div class="row example4">
+            fsfs
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="row-cols-2 base_col2_1">
+            <p class="nav_text text-center">Топ розы</p>
+        </div>
+        <div class="row-cols-2 base_col2_2 ">
             подколонка2
         </div>
-        <div class="row base_col2_1">
-            <p class="nav_text d-flex align-items-center justify-content-center">Советы</p>
+        <div class="row-cols-2 base_col2_1">
+            <p class="nav_text text-center">Рекомендации</p>
         </div>
-        <div class="row base_col2_2 ">
+        <div class="row-cols-2 base_col2_2 ">
             подколонка2
         </div>
     </div>
