--- a/catalog/static/catalog/css/base.css
+++ b/catalog/static/catalog/css/base.css
@@ -34,10 +34,14 @@
 }
 
 .nav_text {
+
     font-family: 'Istok Web';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
+    line-height: 46px;
+   
+    
     color: #FBF8F8;
 }
 
@@ -68,11 +72,11 @@
     background: #40B65A;
     border: 1px solid #40B65A;
     border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-top: 10px;
 }
 
 .base_col2_2 {
-    height: 300px;
 
     background: #FBF8F8;
     border: 1px solid #8A8686;
