--- a/catalog/static/catalog/css/home.css
+++ b/catalog/static/catalog/css/home.css
@@ -21,3 +21,24 @@
 .example6 {
     background-color: rgb(169, 161, 14);
 }
+
+.home_col1 {
+    height: 106px;
+
+    background: #40B65A;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.home_col1_text {
+    font-family: 'Istok Web';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 46px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    
+    color: #FBF8F8;
+}
