--- a/catalog/static/catalog/css/home.css
+++ b/catalog/static/catalog/css/home.css
@@ -39,6 +39,13 @@
     display: flex;
     align-items: center;
     text-align: center;
-    
+
     color: #FBF8F8;
+}
+.home_img {
+    position: absolute;
+    width: 333px;
+    height: 337px;
+
+    border-radius: 20px;
 }
